Fix presentation overflow scroll

--- a/components/presentation/index.css
+++ b/components/presentation/index.css
@@ -9,6 +9,7 @@
   align-items: baseline;
   min-height: 100vh;
   padding-top: 10vh;
+  overflow: hidden;
 }
 
 .Presentation-text {
@@ -78,7 +79,7 @@
 }
 
 .Presentation-col:nth-child(4) {
-  left: 26vw;
+  left: 18vw;
   animation-delay: 275ms;
 }
 
@@ -108,6 +109,10 @@
     bottom: -2px;
     background-size: 8px;
   }
+
+  .Presentation-col:nth-child(2) { left: 14vw; }
+  .Presentation-col:nth-child(3) { left: 10vw; }
+  .Presentation-col:nth-child(4) { left: 26vw; }
 }
 
 @media (min-width: 900px) {
